expense service classes and api generated + some fix (group) in all modules build gradle
